--- a/web/src/styles/main.scss
+++ b/web/src/styles/main.scss
@@ -22,6 +22,7 @@
 @import 'sparkta-ui/components/c-row/index';
 @import 'sparkta-ui/components/c-col/index';
 @import 'sparkta-ui/components/c-line-separator/index';
+@import 'sparkta-ui/components/c-list/index';
 @import 'sparkta-ui/components/c-button/index';
 @import 'sparkta-ui/components/c-input/index';
 @import 'sparkta-ui/components/c-searchbox/index';
